<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/use_role"
                android:id="@+id/textView2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#858585" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/role_doctor"
                    android:id="@+id/textView"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_use_doctor"
                    android:layout_weight="5"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="16dp"
                android:id="@+id/linearLayout"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/role_sniper"
                    android:id="@+id/textView3"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_use_sniper"
                    android:layout_weight="5"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="16dp"
                android:id="@+id/linearLayout2"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/role_don_mafia"
                    android:id="@+id/textView4"
                    android:layout_weight="1" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_use_don"
                    android:layout_weight="5"
                    android:checked="true" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enable_sending"
                android:id="@+id/tv_title_enable"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#858585" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/send_enable_switch"
                android:id="@+id/s_enable_sending"
                android:checked="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
